Fix lectern Take Book not saving last edits. Fix page contents not being saved in some cases.